# proto2ffi

./: .gitignore  BENCHMARK_QUICK_REFERENCE.md  CHANGELOG.md  COMPREHENSIVE_BENCHMARK_REPORT.md  CONTRIBUTING.md  Cargo.toml  DEEP_OPTIMIZATION_ANALYSIS.md  FINAL_OPTIMIZATION_REPORT.md  LICENSE  OPTIMIZATION_ANALYSIS.md  PHASE2_RESULTS.md  README.md  TESTING_REPORT.md  TEST_CONSOLIDATION_REPORT.md  ULTRA_OPTIMIZATIONS.md  test_output.txt  test_results.txt
.github/workflows/: ci.yml  release.yml
archive/: EXAMPLES.md  PRODUCTION_GUIDE.md
archive/proto2ffi-cli-old/: Cargo.toml
archive/proto2ffi-core-old/src/: benchmark.rs  codegen_cache.rs  diff.rs  doc.rs  error.rs  layout.rs  lib.rs  optimize.rs  parallel.rs  types.rs  validator.rs
docs/: API.md  GETTING_STARTED.md  PERFORMANCE.md  PRODUCTION_GUIDE.md
examples/: README.md  STRUCTURE.md
examples/01_basic/lib/: phase4.dart
examples/01_basic/rust/: Cargo.toml
examples/01_basic/test/: ffi_example_test.dart  final_erp_integration_test.dart  phase2_test.dart  phase3_test.dart
examples/02_flutter_plugin/lib/: proto2ffi_example.dart
examples/02_flutter_plugin/rust/: Cargo.toml
examples/03_benchmarks/: ADVANCED_BENCHMARKS.md  BENCHMARK_ENHANCEMENTS.md  BENCHMARK_RESULTS.md  Cargo.toml  README.md
examples/03_benchmarks/dart/: benchmarks.dart  generated.dart  pubspec.yaml
examples/03_benchmarks/dart/lib/: generated.dart
examples/03_benchmarks/results/: advanced_benchmarks.json  advanced_report.html  benchmark_report.html  benchmarks.json  comparison_summary.html  recommendations.json
examples/03_benchmarks/rust/src/: generated.rs
examples/03_benchmarks/schemas/: game_engine.proto  iot_sensors.proto  social_media.proto
examples/03_benchmarks/src/: cache_analysis.rs  comparisons.rs  contention_analysis.rs  latency_analysis.rs  lib.rs  main.rs  memory_analysis.rs  statistical_analysis.rs
examples/04_image_processing/: TESTING_SUMMARY.md  TEST_REPORT.md
examples/04_image_processing/flutter/: pubspec.yaml
examples/04_image_processing/proto/: image.proto
examples/04_image_processing/rust/: Cargo.toml
examples/05_database_engine/: TEST_RESULTS.md
examples/05_database_engine/flutter/: pubspec.yaml
examples/05_database_engine/proto/: database.proto
examples/05_database_engine/rust/: Cargo.toml
examples/06_edge_cases/: README.md
examples/06_edge_cases/dart/: pubspec.yaml
examples/06_edge_cases/proto/: edge_cases.proto
examples/06_edge_cases/rust/: Cargo.toml
examples/07_concurrent_pools/: README.md  STRESS_TEST_REPORT.md  TEST_RESULTS.md  pubspec.yaml
examples/07_concurrent_pools/lib/: bindings.dart  generated.dart
examples/07_concurrent_pools/proto/: concurrent.proto
examples/07_concurrent_pools/rust/: Cargo.toml
examples/07_concurrent_pools/rust/src/: generated.rs  lib.rs
examples/07_concurrent_pools/test/: concurrent_test.dart
examples/08_simd_operations/: README.md  SIMD_TEST_REPORT.md  TEST_SUMMARY.md
examples/08_simd_operations/flutter/: pubspec.yaml
examples/08_simd_operations/proto/: simd.proto
examples/08_simd_operations/rust/: Cargo.toml
examples/08_simd_operations/rust/src/: generated.rs  lib.rs
examples/09_stress_tests/: LIMITATIONS_FOUND.md  README.md  STATUS.md  pubspec.yaml
examples/09_stress_tests/lib/: generated.dart
examples/09_stress_tests/rust/: Cargo.toml
examples/09_stress_tests/test/: stress_test.dart
examples/10_real_world_scenarios/: README.md
examples/10_real_world_scenarios/01_video_streaming/: PERFORMANCE_REPORT.md
examples/11_ultra_complex/: README.md  SUMMARY.md  pubspec.yaml
examples/11_ultra_complex/lib/: generated.dart  ultra_complex.dart
examples/11_ultra_complex/rust/: Cargo.toml
examples/11_ultra_complex/test/: ultra_complex_test.dart
examples/12_flutter_app/: IMPLEMENTATION.md  README.md  pubspec.yaml
examples/12_flutter_app/lib/: generated.dart  main.dart
examples/12_flutter_app/rust/: Cargo.toml
examples/12_flutter_app/test/: ffi_service_test.dart  integration_test.dart
examples/benchmark_suite/: Cargo.toml  README.md
examples/benchmark_suite/schemas/: blockchain.proto  trading_system.proto
examples/benchmark_suite/src/: main.rs
examples/blog_api/dart_app/: pubspec.yaml
examples/blog_api/proto/: blog.proto
examples/dart_ffi_lib/: librust_lib.dylib  pubspec.yaml
examples/dart_ffi_lib/example/: benchmark.dart  benchmark_summary.dart  main.dart  optimization_benchmark.dart  phase2_benchmark.dart  pooling_benchmark.dart  single_call_analysis.dart  single_call_benchmark.dart
examples/dart_ffi_lib/lib/: dart_ffi_lib.dart
examples/flutter_plugin/: pubspec.yaml
examples/hello_world/proto/: hello.proto
examples/hello_world/rust_service/: Cargo.toml  build.rs
examples/proto/: calculator.proto  complex_data.proto
examples/rust_lib/: Cargo.toml  build.rs  cbindgen.toml  rust_lib.h
examples/rust_lib/src/: lib.rs
ffi_example/: pubspec.yaml
ffi_example/lib/: ffi_example.dart  phase2.dart  phase3.dart
ffi_example/lib/phase2/: generated.dart
ffi_example/rust/proto/: phase4.proto
ffi_example/rust/src/: lib.rs
ffi_example/test/: phase4_test.dart  phase5_edge_cases_test.dart
proto2ffi-cli/src/: main.rs
proto2ffi-core/: Cargo.toml
proto2ffi-core/src/: arena.rs  batch.rs  cache.rs  codegen_cache.rs  config.rs  doc.rs  error.rs  layout.rs  lib.rs  parser.rs  proto.pest  serde.rs  stats.rs  types.rs  utils.rs
proto2ffi-core/src/generator/: c.rs  dart.rs  mod.rs  pool.rs  proto_model.rs  rust.rs  simd.rs  wrapper.rs
proto2ffi-core/src/generator/dart/: byte_buffer_bindings.rs  client.rs  mod.rs
proto2ffi-core/src/generator/rust/: byte_buffer.rs  ffi_exports.rs  mod.rs  service_trait.rs
proto2ffi-core/src/model/: message.rs  method.rs  mod.rs  service.rs
proto2ffi-core/src/parser/: mod.rs
proto2ffi-runtime/dart/: pubspec.yaml
proto2ffi-runtime/dart/lib/: proto2ffi_runtime.dart
proto2ffi-runtime/rust/: Cargo.toml
proto2ffi-runtime/rust/src/: byte_buffer.rs  error.rs  lib.rs
research/proto_benchmark/: BENCHMARK_RESULTS.md
research/proto_benchmark/ffi_rust/: Cargo.toml  (+1 more)
(+119 files in other folders)
