[workspace]
resolver = "2"
members = [
    "proto2ffi-core",
    "proto2ffi-cli",
    "examples/01_basic/rust",
    "examples/02_flutter_plugin/rust",
    "examples/03_benchmarks",
    "examples/04_image_processing/rust",
    "examples/05_database_engine/rust",
    "examples/07_concurrent_pools/rust",
    "examples/09_stress_tests/rust",
    "examples/10_real_world_scenarios/01_video_streaming/rust",
    "examples/10_real_world_scenarios/02_game_engine/rust",
    "examples/10_real_world_scenarios/03_trading_system/rust",
    "examples/10_real_world_scenarios/04_iot_aggregation/rust",
    "examples/10_real_world_scenarios/05_ml_pipeline/rust",
]

[workspace.package]
version = "0.1.1"
edition = "2021"
authors = ["Proto2FFI Contributors"]
license = "MIT"
repository = "https://github.com/proto2ffi/proto2ffi"
homepage = "https://github.com/proto2ffi/proto2ffi"
documentation = "https://docs.rs/proto2ffi"

[workspace.dependencies]
# Parser
pest = "2.7"
pest_derive = "2.7"

# Code generation
quote = "1.0"
proc-macro2 = "1.0"
syn = { version = "2.0", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# CLI
clap = { version = "4.5", features = ["derive"] }
colored = "2.1"

# Async (for future use)
tokio = { version = "1.36", features = ["full"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
