[workspace]
resolver = "2"
members = [
    "proto2ffi-core",
    "proto2ffi-cli",
    "proto2ffi-runtime/rust",
]
exclude = [
    "examples/*",
]

[workspace.package]
version = "0.2.0"
edition = "2021"
authors = ["Proto2FFI Contributors"]
license = "MIT"
repository = "https://github.com/santoshakil/proto2ffi"
homepage = "https://github.com/santoshakil/proto2ffi"
documentation = "https://docs.rs/proto2ffi"
rust-version = "1.70"

[workspace.dependencies]
# Proto parsing
protobuf = "3.3"
protobuf-parse = "3.3"
prost = "0.12"
prost-types = "0.12"

# Code generation
heck = "0.4"
quote = "1.0"
proc-macro2 = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# CLI
clap = { version = "4.4", features = ["derive", "cargo"] }
colored = "2.1"

# File operations
walkdir = "2.4"

# Testing
assert_cmd = "2.0"
predicates = "3.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
