[package]
name = "proto2ffi-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
rust-version.workspace = true
description = "Core library for proto2ffi: protobuf-to-FFI code generator"
keywords = ["protobuf", "ffi", "dart", "rust", "codegen"]
categories = ["development-tools", "parsing"]

[dependencies]
# Proto parsing
protobuf.workspace = true
protobuf-parse.workspace = true

# Code generation
heck.workspace = true

# Error handling
anyhow.workspace = true
thiserror.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
predicates.workspace = true
