[package]
name = "proto2ffi"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "CLI tool for generating zero-copy FFI bindings from Protocol Buffers"
keywords = ["ffi", "protobuf", "codegen", "dart", "flutter"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "proto2ffi"
path = "src/main.rs"

[dependencies]
proto2ffi-core = { path = "../proto2ffi-core" }
clap.workspace = true
colored.workspace = true
anyhow.workspace = true

[dev-dependencies]
