[package]
name = "proto2ffi_benchmarks"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "benchmarks"
path = "src/main.rs"

[lib]
name = "benchmarks_lib"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
prost = "0.13"
flatbuffers = "24.3"
bincode = "1.3"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[build-dependencies]
prost-build = "0.13"
