[package]
name = "proto2ffi_benchmarks"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "benchmarks"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
