[package]
name = "simd_operations_ffi"
version = "0.1.0"
edition = "2021"

[workspace]

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[target.'cfg(target_arch = "x86_64")'.dependencies]

[target.'cfg(target_arch = "aarch64")'.dependencies]
